# rendell

./: .gitmodules  CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
include/gl/: wglext.h
include/rendell/: Color.h  DataContainer.h  DataType.h  DrawType.h  GarbageCollector.h  IRenderContext.h  IResourceContext.h  IndexBuffer.h  Instance.h  Ref.h  RenderCommandBuffer.h  RenderContext.h  ResourceCommandBuffer.h  ResourceId.h  ResourceIdGuard.h  ResourceValidation.h  Service.h  ShaderBuffer.h  ShaderProgram.h  Texture2D.h  Texture2DArray.h  TextureFormat.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  VertexLayout.h  consts.h  hash.h  init.h  init_types.h  rendell.h  rendell_factory.h  rendell_static.h
include/rendell/oop/: FragmentShader.h  IndexBuffer.h  ShaderBuffer.h  ShaderProgram.h  Texture2D.h  Texture2DArray.h  Uniform.h  UniformBuffer.h  VertexAssembly.h  VertexBuffer.h  VertexShader.h  rendell_oop.h
include/rendell/private/: defines.h
internal/: CallbackTable.h  Command.h  CommandBuffer.h  CommandBufferPool.h  CommandExecutor.h  ContextPool.h  DataContainerStorage.h  DrawCallState.h  Factory.h  IContext.h  InstanceImpl.h  InstanceRegistry.h  Pool.h  ReleasedResourceIds.h  RendellExtractor.h  RenderCommandBufferImpl.h  RenderContext.h  RenderContextFactory.h  RenderContextImpl.h  RenderContextManager.h  RenderContextPool.h  RenderPipeline.h  RenderPipelineStorage.h  ResourceCommandBuffer.h  ResourceCommandBufferImpl.h  ResourceContext.h  ResourceContextPool.h  ResourceDataProvider.h  ResourceExecutor.h  ResourceIdStorage.h  ResourceIdStorages.h  ResourceIdsAllocator.h  config.h  context_creation.h  logging.h  raii.h  rendell_factory.h
internal/Backend/: Factory.h  FragmentShader.h  IndexBuffer.h  ShaderBuffer.h  ShaderProgram.h  Texture2D.h  Uniform.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  VertexShader.h
internal/Buffers/: Buffer.h  ByteBuffer.h  ByteRingBuffer.h  RingBuffer.h
internal/OpenGL/: OpenGLContext.h  OpenGLFragmentShader.h  OpenGLIndexBuffer.h  OpenGLRenderExecutor.h  OpenGLRenderPipeline.h  OpenGLRenderPipelineSync.h  OpenGLResourceExecutor.h  OpenGLResourceStorage.h  OpenGLShaderBuffer.h  OpenGLShaderProgram.h  OpenGLTexture2D.h  OpenGLTexture2DArray.h  OpenGLUniformBuffer.h  OpenGLVertexArray.h  OpenGLVertexBuffer.h  OpenGLVertexBufferLayout.h  OpenGLVertexShader.h
internal/OpenGL/Platform/: LinuxOpenGLContext.h  WindowsOpenGLContext.h
internal/utils/: ConcurrentQueue.h  MPMC_Queue.h  Registry.h
src/: ByteRingBuffer.cpp  CallbackTable.cpp  Color.cpp  CommandBuffer.cpp  DataContainerStorage.cpp  DataType.cpp  DataType.h  Factory.cpp  GarbageCollector.cpp  IContext.h  IndexBuffer.cpp  IndexBuffer.h  Instance.cpp  InstanceImpl.cpp  RendellState.cpp  RenderCommandBuffer.cpp  RenderContext.cpp  RenderContextManager.cpp  RenderContextPool.cpp  RenderPipelineStorage.cpp  Renderer.cpp  Renderer.h  ResourceCommandBuffer.cpp  ResourceCommandBufferImpl.cpp  ResourceContext.cpp  ResourceContextPool.cpp  ResourceExecutor.cpp  ResourceIdStorage.cpp  ResourceValidation.cpp  Service.cpp  ShaderBuffer.cpp  ShaderBuffer.h  ShaderProgram.cpp  ShaderProgram.h  Specification.h  StaticCallbacks.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  Texture2DArray.h  (+20 more)
src/OpenGL/: OpenGLContext.h  OpenGLFactory.cpp  OpenGLFactory.h  OpenGLFragmentShader.cpp  OpenGLFragmentShader.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderExecutor.cpp  OpenGLRenderPipeline.cpp  OpenGLRenderPipelineSync.cpp  OpenGLResourceExecutor.cpp  OpenGLResourceStorage.cpp  OpenGLShaderBuffer.cpp  OpenGLShaderBuffer.h  OpenGLShaderCompilation.cpp  OpenGLShaderCompilation.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLSpecification.cpp  OpenGLSpecification.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLTexture2DArray.cpp  OpenGLTexture2DArray.h  OpenGLTextureFormat.cpp  OpenGLTextureFormat.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLUtils.cpp  OpenGLUtils.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexBufferLayout.cpp  OpenGLVertexShader.cpp  OpenGLVertexShader.h  glad_initialization.cpp  glad_initialization.h
src/OpenGL/Platform/: LinuxOpenGLContext.cpp  LinuxOpenGLContext.h  WindowsOpenGLContext.cpp  WindowsOpenGLContext.h
src/oop/: FragmentShader.cpp  IndexBuffer.cpp  ShaderBuffer.cpp  ShaderProgram.cpp  Texture2D.cpp  Texture2DArray.cpp  UniformBuffer.cpp  VertexAssembly.cpp  VertexBuffer.cpp  VertexShader.cpp
